[MAT-508]Tweaked nova-org Raft Orderer

--- a/environments/prod/nova-org/docker-compose.yml
+++ b/environments/prod/nova-org/docker-compose.yml
@@ -31,11 +31,12 @@ services:
     container_name: orderer.alphamed.com
     image: hyperledger/fabric-orderer
     environment:
-      - FABRIC_LOGGING_SPEC=grpc=debug:info
+      - FABRIC_LOGGING_SPEC=debug:info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
-      - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/n2medchannel.block
-      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:8443
+      - ORDERER_GENERAL_GENESISFILE=/etc/hyperledger/configtx/config_block.pb
+      - ORDERER_GENERAL_LOCALMSPID=AlphamedOrdererMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/etc/hyperledger/msp/orderer/msp
       # Enable TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
@@ -45,11 +46,11 @@ services:
       - ORDERER_GENERAL_TLS_CLIENTROOTCAS=/etc/hyperledger/msp/orderer/tls/ca.crt
       - ORDERER_GENERAL_CLUSTER_CLIENTCERTIFICATE=/etc/hyperledger/msp/orderer/tls/server.crt
       - ORDERER_GENERAL_CLUSTER_CLIENTPRIVATEKEY=/etc/hyperledger/msp/orderer/tls/server.key
-      - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/etc/hyperledger/msp/orderer/tls/ca.crt]      
+      - ORDERER_GENERAL_CLUSTER_ROOTCAS=[/etc/hyperledger/msp/orderer/tls/ca.crt]
     working_dir: /opt/orderer
     command: orderer
     ports:
-      - 8050:8050
+      - 7050:7050
     volumes:
         - ./config/:/etc/hyperledger/configtx
         - ./crypto-config/ordererOrganizations/orderers/orderer.alphamed.com:/etc/hyperledger/msp/orderer
@@ -90,12 +91,13 @@ services:
     command: peer node start
     ports:
       - 7051:7051
-      - 8053:8053
+      - 7053:7053
     volumes:
         - /var/run/:/host/var/run/
         - ./crypto-config/peerOrganizations/peers/peer0.${COMPANY_DOMAIN}:/etc/hyperledger/peer
         - ./crypto-config/peerOrganizations/users:/etc/hyperledger/peer/users
         - ./config:/etc/hyperledger/configtx
+        - ./crypto-config/ordererOrganizations/orderers/orderer.alphamed.com/tls:/etc/hyperledger/peer/ordererTLS
         - ../../../fabric/chaincodes/med:/etc/hyperledger/chaincode/med/        
     depends_on:
       - orderer
