--- a/environments/prod/rede-inicial-n2mi/backoffice-onboarding/package.json
+++ b/environments/prod/rede-inicial-n2mi/backoffice-onboarding/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yattabet",
+  "name": "n2med",
   "version": "1.0.0",
-  "description": "yattabet",
+  "description": "n2med endpoints",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "fabric-ca-client": "~1.3.0",
     "fabric-client": "~1.3.0",
-    "grpc": "^1.6.0"
+    "grpc": "^1.6.0",
+    "request": "^2.88.0"
   }
 }
