--- a/environments/prod/nova-org/configtx.yaml
+++ b/environments/prod/nova-org/configtx.yaml
@@ -11,7 +11,7 @@ Organizations:
         ID: AlphamedOrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: crypto-config/ordererOrganizations/orderers/orderer.alphamed.com/msp
+        MSPDir: crypto-config/ordererOrganizations/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
