--- a/environments/prod/nova-org/setup-component/package.json
+++ b/environments/prod/nova-org/setup-component/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "fabric-ca-client": "~1.3.0",
     "fabric-client": "~1.3.0",
-    "grpc": "^1.6.0"
+    "grpc": "^1.6.0",
+    "request": "^2.88.0"
   }
 }
